--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ group = 'com.github.retucio'
 version = '1.0.0'
 
 java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+
     withSourcesJar()
     withJavadocJar()
 }
