--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id 'signing'
 }
 
 group = 'com.github.retucio'
-version = '1.0.0'
+version = '1.0.2'
 
 java {
     sourceCompatibility = JavaVersion.VERSION_21
